@@ -30,9 +30,9 @@ enum insertion_type
   example, flushleft, flushright, format, ftable, group, ifclear,
   ifdocbook, ifhtml, ifinfo, ifnotdocbook, ifnothtml, ifnotinfo,
   ifnotplaintext, ifnottex, ifnotxml, ifplaintext, ifset, iftex, ifxml,
-  itemize, lisp, menu, multitable, quotation, rawhtml, rawtex,
-  smalldisplay, smallexample, smallformat, smalllisp, verbatim, table,
-  tex, vtable, titlepage, bad_type
+  itemize, lisp, menu, multitable, quotation, rawdocbook, rawhtml, rawtex,
+  rawxml, smalldisplay, smallexample, smallformat, smalllisp, verbatim,
+  table, tex, vtable, titlepage, bad_type
 };
 
 typedef struct istack_elt
